<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_sample"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/et_border1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/et_border"
                    android:text="@string/up_category"
                    android:textColor="#f7861b"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_birthday"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer"
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_age"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer1"
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_gender"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_hometown"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer4"
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_job"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_spoken"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_hobbies"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:fontFamily="@font/baloo_bhaijaan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/question8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/question_color"
                    android:textColor="#5e17eb"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/baloo_bhaijaan"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:fontFamily="@font/baloo_bhaijaan"/>

                <Button
                    android:id="@+id/button_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:fontFamily="@font/baloo_bhaijaan"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>